# spotify-datapipeline

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: data_quality_dag.py  spotify_etl_dag.py
airflow/plugins/custom_operators/: __init__.py
dbt/spotify_dq/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml.template
dbt/spotify_dq/macros/data_quality/: test_completeness_threshold.sql  test_freshness_sla.sql  test_referential_integrity.sql  test_value_in_range.sql
dbt/spotify_dq/models/marts/analytics/: _analytics__models.yml  dq_metrics_summary.sql
dbt/spotify_dq/models/marts/core/: _core__models.yml  dim_artists.sql  dim_countries.sql  dim_date.sql  dim_genres.sql  dim_labels.sql  fct_streaming_metrics.sql  fct_tracks.sql
dbt/spotify_dq/models/staging/: _staging.yml  _staging__models.yml  stg_spotify__tracks.sql
dbt/spotify_dq/seeds/: valid_countries.csv  valid_genres.csv
dbt/spotify_dq/tests/singular/: assert_audio_features_bounded.sql  assert_no_orphan_tracks.sql  assert_release_date_valid.sql  assert_streaming_counts_positive.sql  assert_tempo_reasonable.sql
docker/: docker-compose.yml
docker/grafana/: Dockerfile
docker/grafana/provisioning/dashboards/: dashboard.yml  data-quality-overview.json
docker/grafana/provisioning/datasources/: postgres.yml
docker/postgres/: Dockerfile
docker/postgres/init-scripts/: 01-create-databases.sql  02-create-schemas.sql  03-create-dq-tables.sql
docs/: DATA_QUALITY_TROUBLESHOOTING.md
notebooks/: data_exploration.ipynb
scripts/: reset_database.sh
