# =============================================================================
# Spotify Data Quality Pipeline - Python Project Configuration
# =============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-datapipeline"
version = "1.0.0"
description = "Production-ready Spotify data pipeline with comprehensive data quality monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Data Engineering Team"}
]
keywords = [
    "data-engineering",
    "data-quality",
    "dbt",
    "airflow",
    "etl",
    "spotify",
    "analytics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "dbt-postgres>=1.7.0",
    # Note: dbt-expectations is a dbt package (installed via dbt deps), not pip
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-postgres>=5.0.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "kagglehub>=0.2.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "sqlfluff>=3.0.0",
    "yamllint>=1.32.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/spotify_datapipeline"
Documentation = "https://github.com/yourusername/spotify_datapipeline#readme"
Repository = "https://github.com/yourusername/spotify_datapipeline"
Issues = "https://github.com/yourusername/spotify_datapipeline/issues"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | dbt_packages
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["spotify_datapipeline"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    "dbt_packages",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=scripts --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
